--- a/templates/board/lists.html
+++ b/templates/board/lists.html
@@ -7,5 +7,11 @@
 </head>
 <body>
     <h1>board lists</h1>
+    <ul>
+        {% for post in posts %}
+        <li>
+            <strong>{{post.title}}</strong><span>{{post.created_at}}</span>
+        </li>
+    </ul>
 </body>
 </html>
