--- a/templates/board/lists.html
+++ b/templates/board/lists.html
@@ -13,5 +13,6 @@
             <strong>{{post.title}}</strong><span>{{post.created_at}}</span>
         </li>
     </ul>
+    {% end for %}
 </body>
 </html>
