--- a/templates/board/delete.html
+++ b/templates/board/delete.html
@@ -1,19 +1,11 @@
-{% load static %}
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="{% static 'css/style.css' %}">
-    <script src="{% static 'js/jquery-3.7.1.min.js' %}"></script>
-    <title>삭제</title>
-</head>
-<body>
-    <h1>삭제</h1>
-    <p>"{{ post.title }}" 삭제하시겠습니까</p>
-    <form methd="post">
+{% extends "base.html" %}
+{% block title %} 삭제 {% endblock %}
+{% block header %}{{post.title}} 삭제하시겠습니까? {% endblock %}
+
+
+{% block body %}
+    <form method="post">
         {% csrf_token %}
-        <button type="submit">등록</button>
+            <button type="submit">등록</button>
     </form>
-</body>
-</html>
+{% endblock %}
