--- a/templates/board/update.html
+++ b/templates/board/update.html
@@ -1,15 +1,8 @@
-{% load static %}
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=], initial-scale=1.0">
-    <link rel="stylesheet" href="{% static 'css/style.css' %}">
-    <script src="{% static 'js/jquery-3.7.1.min.js' %}"></script>
-    <title>update</title>
-</head>
-<body>
-    <h1>게시글 수정</h1>
+{% extends "base.html" %}
+{% block title %} 업데이트 {% endblock %}
+{% block header %} 게시글 수정 {% endblock %}
+
+{% block body %}
     <form methd="post">
         {% csrf_token %}
     <p>
@@ -20,5 +13,4 @@
     </p>
         <button type="submit">등록</button>
     </form>
-</body>
-</html>
+{% endblock %}
